[gd_scene load_steps=6 format=2]

[ext_resource path="res://game/main_screens/question_templates/Elements/big_button.gd" type="Script" id=1]
[ext_resource path="res://game/assets/ui/icons/big_button_border.png" type="Texture" id=2]
[ext_resource path="res://game/assets/ui/icons/big_button.png" type="Texture" id=3]
[ext_resource path="res://game/assets/ui/fonts/BaseFontHuge.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="BigButton" type="Button"]
margin_left = -128.0
margin_top = -128.0
margin_right = 128.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 128, 128 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )
script = ExtResource( 1 )
button_text = "Verdadero"

[node name="BigButtonBorder" type="TextureRect" parent="."]
unique_name_in_owner = true
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 2 )
expand = true

[node name="BigButton" type="TextureRect" parent="BigButtonBorder"]
unique_name_in_owner = true
modulate = Color( 0, 0, 0, 1 )
margin_right = 256.0
margin_bottom = 256.0
texture = ExtResource( 3 )
expand = true

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 4 )
text = "Verdadero"
align = 1
valign = 1

[connection signal="button_down" from="." to="." method="_on_BigButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_BigButton_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_BigButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_BigButton_mouse_exited"]
